@@ -356,7 +356,6 @@
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9003)</visible>
                             <label>$LOCALIZE[31321]</label>
                             <include>Defs_Settings_Button</include>
-                            <onclick>Skin.Reset(overlaycolor.name)</onclick>
                             <onclick>Skin.Reset(MatchOverlayColors)</onclick>
                             <onclick>Skin.Reset(DisableOverlayColor)</onclick>
                             <onclick>Skin.Reset(DisableVignette)</onclick>
@@ -445,8 +444,6 @@
                             <onclick>Skin.Reset(CycleColors)</onclick>
                             <onclick>Skin.Reset(MatchColors)</onclick>
                             <onclick>Skin.Reset(MatchOverlayColors)</onclick>
-                            <onclick>Skin.Reset(DisableOverlayColor)</onclick>
-                            <onclick>Skin.Reset(DisableVignette)</onclick>
                         </control>
                         
                         <!-- ======= -->
