@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<addon id="skin.aura" version="0.9.29" name="Aura" provider-name="jurialmunkey">
+<addon id="skin.aura" version="0.9.30" name="Aura" provider-name="jurialmunkey">
     <requires>
         <import addon="xbmc.gui" version="5.13.0"/>
         <import addon="script.skinshortcuts" version="0.4.0"/>
