@@ -1,5 +1,8 @@
+[B]0.9.30[/B]
+SKINSETTINGS - Fix reset to defaults button
+
 [B]0.9.29[/B]
-REMOVE - Skin Helper as Dependency (Now optional install)
+DEPENDENCY - Remove Skin Helper as Dependency (Now optional install)
 SKIN HELPER - Add some checks that it is installed before using.
 ARIAL FONT - Tweaks
 
